samples/_failures_safe/1761599205_0656eb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e5c847e4.c: In function ‘main’:
./samples/SAFE/__tmp_e5c847e4.c:158:20: error: missing terminating " character
  158 |             printf("[%s] %-8s: %
      |                    ^~~~~~~~~~~~~
./samples/SAFE/__tmp_e5c847e4.c:158:13: error: expected expression at end of input
  158 |             printf("[%s] %-8s: %
      |             ^~~~~~
./samples/SAFE/__tmp_e5c847e4.c:158:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e5c847e4.c:158:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e5c847e4.c:158:13: error: expected declaration or statement at end of input
